[package]
name = "regex_afl"
version = "0.0.1"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/regex"
homepage = "https://github.com/rust-lang/regex"
description = """
Used to test the rust Regex library using the American Fuzzy Lop
instrumentation-guided fuzzer.
"""

[dependencies.regex]
path = ".."
version = "0.1.63"
features = ["afl-fuzz"]

[dependencies]
afl = "0.1"
afl-plugin = "0.1"

